# uroboro-transformations

./: .gitignore  Main.hs  PrettyPrint.hs  README.md  Setup.hs  UroboroTransformations.hs  chap3.tex  compos.uro  eval1.uro  test.uro  test_multi_des.uro  transformations.tex  uroboro-transformations.cabal
.cabal-sandbox/: add-source-timestamps
.cabal-sandbox/lib/x86_64-osx-ghc-7.8.3/uroboro-0.1.0.0/: Paths_uroboro.dyn_hi  Paths_uroboro.hi  Paths_uroboro.p_hi  libHSuroboro-0.1.0.0-ghc7.8.3.dylib
.cabal-sandbox/lib/x86_64-osx-ghc-7.8.3/uroboro-0.1.0.0/Uroboro/: Checker.dyn_hi  Checker.hi  Checker.p_hi  Error.dyn_hi  Error.hi  Error.p_hi  Interpreter.dyn_hi  Interpreter.hi  Interpreter.p_hi  Language.dyn_hi  Language.hi  Language.p_hi  Parser.dyn_hi  Parser.hi  Parser.p_hi  PrettyPrint.dyn_hi  PrettyPrint.hi  PrettyPrint.p_hi  Token.dyn_hi  Token.hi  Token.p_hi  Tree.dyn_hi  Tree.hi  Tree.p_hi
.cabal-sandbox/lib/x86_64-osx-ghc-7.8.3/uroboro-transformations-0.0/: PrettyPrint.dyn_hi  PrettyPrint.hi  PrettyPrint.p_hi  libHSuroboro-transformations-0.0-ghc7.8.3.dylib
.cabal-sandbox/share/doc/x86_64-osx-ghc-7.8.3/uroboro-0.1.0.0/html/: Uroboro-Checker.html  Uroboro-Error.html  Uroboro-Interpreter.html  Uroboro-Language.html  Uroboro-Parser.html  Uroboro-PrettyPrint.html  Uroboro-Token.html  Uroboro-Tree.html  doc-index.html  index-frames.html  index.html  mini_Uroboro-Checker.html  mini_Uroboro-Error.html  mini_Uroboro-Interpreter.html  mini_Uroboro-Language.html  mini_Uroboro-Parser.html  mini_Uroboro-PrettyPrint.html  mini_Uroboro-Token.html  mini_Uroboro-Tree.html  uroboro.haddock
.cabal-sandbox/share/doc/x86_64-osx-ghc-7.8.3/uroboro-transformations-0.0/html/: PrettyPrint.html  doc-index.html  index-frames.html  index.html  mini_PrettyPrint.html  uroboro-transformations.haddock
.cabal-sandbox/x86_64-osx-ghc-7.8.3-packages.conf.d/: package.cache  uroboro-0.1.0.0-81436ba01acb514108a6e8bd3b28f2cb.conf  uroboro-transformations-0.0-fae83463e5e191cc770c7e625d8aaa14.conf
UroboroTransformations/: Defunc.hs  Refunc.hs  Util.hs
UroboroTransformations/CoDataDefsDisj/: Defunc.hs  Refunc.hs
UroboroTransformations/CoDataFragments/: Defunc.hs  Refunc.hs
UroboroTransformations/Entangled/: Defunc.hs  FragmentTest.hs
UroboroTransformations/FragmentsForDefunc/Entangled/: Defunc.hs  FragmentTest.hs
UroboroTransformations/FragmentsForDefunc/MixedDefs/: Defunc.hs  FragmentTest.hs
UroboroTransformations/FragmentsForRefunc/Entangled/: Refunc.hs
UroboroTransformations/MixedDefs/: Defunc.hs  FragmentTest.hs
UroboroTransformations/Util/: HelperFuns.hs
lib-src/: PrettyPrint.hs
lib-src/UroboroTransformations/: CoDataFragments.hs  CopatternCoverage.hs  CoreDefunc.hs  CoreRefunc.hs  Defunc.hs  Extraction.hs  MoveCon.hs  Refunc.hs  Unnest.hs  Util.hs
lib-src/UroboroTransformations/CoDataDefsDisj/: Defunc.hs  FragmentTest.hs  Refunc.hs
lib-src/UroboroTransformations/CoDataFragments/: Defunc.hs  Refunc.hs
lib-src/UroboroTransformations/CopatternCoverage/: CCTree.hs
lib-src/UroboroTransformations/CoreDR/: CoreDefunc.hs  CoreRefunc.hs  FragmentTests.hs  MoveCon.hs
lib-src/UroboroTransformations/Extraction/: ConExtraction.hs  DesExtraction.hs
lib-src/UroboroTransformations/FragmentsForDefunc/Entangled/: Defunc.hs
lib-src/UroboroTransformations/FragmentsForRefunc/: Entangled.hs
lib-src/UroboroTransformations/FragmentsForRefunc/Entangled/: Refunc.hs
lib-src/UroboroTransformations/Unnest/: ForDefunc.hs  ForRefunc.hs
lib-src/UroboroTransformations/Util/: Conversion.hs  DesExtraction.hs  Equality.hs  ForTesting.hs  HelperFuns.hs  Typed.hs  UroboroEnhanced.hs  VariableSchema.hs
main-defunc-src/: Main.hs
main-src/: CC.hs  Defunc.hs  DefuncCore.hs  DesExtraction.hs  DisentangleD.hs  DisentangleR.hs  ElimMultiDes.hs  MoveCon.hs  Refunc.hs  RefuncCore.hs  Split.hs  UnmixD.hs  UnmixR.hs  UnnestD.hs  UnnestDOneStep.hs  UnnestR.hs
samples/: dead_rules.uro  dyck_recognizer.uro  eval1_result.uro  failure.uro  failure2.uro  failure3.uro  failure_result.uro  fibonacci_stream.uro  self_interpreter.uro  strange_mixed_case  test_multi_des_result.uro
talk/: bibliography.bib  talk.tex
test/: DeRefuncSpec.hs  DefuncSpec.hs  RefuncSpec.hs  Str.hs  TestSpec.hs
thesis_prelim/: abstract.tex  appa.tex  appb.tex  bibliography.bib  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  cover.tex  main.tex  mitthesis.cls
