name:                uroboro-transformations
version:             0.0
-- license:
-- license-file:
-- description:      
author:              Julian Jabs
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   PrettyPrint, UroboroTransformations.CoDataFragments, UroboroTransformations.CoDataFragments.Defunc, UroboroTransformations.CoDataFragments.Refunc
  build-depends:     base >= 4.7 && < 4.8, uroboro, transformers, mtl
  default-language:  Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   ., test
  main-is:          Spec.hs
  other-modules:    Spec, UroboroTransformations.Defunc, Str
  build-depends:
      base    == 4.*
    , uroboro
    , parsec
    , hspec
    , transformers
    , mtl
    , template-haskell
  default-language:    Haskell2010

executable uroboro-transformations
  main-is:           Main.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010