name:                uroboro-transformations
version:             0.0
-- license:
-- license-file:
-- description:      
author:              Julian Jabs
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    lib-src
  exposed-modules:
      PrettyPrint
    , UroboroTransformations.Defunc
    , UroboroTransformations.Refunc
    , UroboroTransformations.CoDataFragments
    , UroboroTransformations.CoDataFragments.Defunc
    , UroboroTransformations.CoDataFragments.Refunc
    , UroboroTransformations.CoDataDefsDisj.FragmentTest
    , UroboroTransformations.CoDataDefsDisj.Defunc
    , UroboroTransformations.CoDataDefsDisj.Refunc
    , UroboroTransformations.FragmentsForDefunc.Entangled.FragmentTest
    , UroboroTransformations.FragmentsForDefunc.Entangled.Defunc
    , UroboroTransformations.FragmentsForDefunc.MixedDefs.FragmentTest
    , UroboroTransformations.FragmentsForDefunc.MixedDefs.Defunc
    , UroboroTransformations.FragmentsForRefunc.Entangled.Refunc
    , UroboroTransformations.Util
    , UroboroTransformations.Util.HelperFuns
    , UroboroTransformations.Util.DesExtraction
  build-depends:     base >= 4.7 && < 4.8, uroboro, transformers, mtl
  default-language:  Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   lib-src, test
  main-is:          Spec.hs
  other-modules:    Spec, UroboroTransformations.Defunc, Str
  build-depends:
      base    == 4.*
    , uroboro
    , parsec
    , hspec
    , transformers
    , mtl
    , template-haskell
  default-language:    Haskell2010

executable defunc
  hs-source-dirs:    main-src
  main-is:           Defunc.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable elim-multi-des
  hs-source-dirs:    main-src
  main-is:           ElimMultiDes.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable unmix-d
  hs-source-dirs:    main-src
  main-is:           UnmixD.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable disentangle-d
  hs-source-dirs:    main-src
  main-is:           DisentangleD.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable defunc-core
  hs-source-dirs:    main-src
  main-is:           DefuncCore.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable refunc
  hs-source-dirs:    main-src
  main-is:           Refunc.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable unmix-r
  hs-source-dirs:    main-src
  main-is:           UnmixR.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable disentangle-r
  hs-source-dirs:    main-src
  main-is:           DisentangleR.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable split
  hs-source-dirs:    main-src
  main-is:           Split.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable refunc-core
  hs-source-dirs:    main-src
  main-is:           RefuncCore.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010