name:                uroboro-transformations
version:             0.0
-- license:
-- license-file:
-- description:      
author:              Julian Jabs
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    lib-src
  exposed-modules:
      PrettyPrint
    , UroboroTransformations.Defunc
    , UroboroTransformations.Refunc
    , UroboroTransformations.CoDataFragments.Defunc
    , UroboroTransformations.CoDataFragments.Refunc
    , UroboroTransformations.Util
    , UroboroTransformations.Util.ForTesting
    , UroboroTransformations.Util.VariableSchema
    , UroboroTransformations.CopatternCoverage
    , UroboroTransformations.CopatternCoverage.CCTree
    , UroboroTransformations.Extraction
    , UroboroTransformations.Extraction.DesExtraction
    , UroboroTransformations.Extraction.ConExtraction
    , UroboroTransformations.Unnest
    , UroboroTransformations.Unnest.ForDefunc
    , UroboroTransformations.Unnest.ForRefunc
    , UroboroTransformations.CoreDR.MoveCon
    , UroboroTransformations.CoreDR.CoreDefunc
    , UroboroTransformations.CoreDR.CoreRefunc
    , UroboroTransformations.CoreDR.FragmentTests
  build-depends:     base >= 4.7 && < 4.8, uroboro, transformers, mtl, containers
  default-language:  Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   lib-src, test
  main-is:          Spec.hs
  other-modules:    Spec, UroboroTransformations.Defunc, Str
  build-depends:
      base    == 4.*
    , uroboro
    , parsec
    , hspec
    , transformers
    , mtl
    , template-haskell
    , containers
  default-language:    Haskell2010

executable defunc
  hs-source-dirs:    main-src
  main-is:           Defunc.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable defunc-core
  hs-source-dirs:    main-src
  main-is:           DefuncCore.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable refunc
  hs-source-dirs:    main-src
  main-is:           Refunc.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable refunc-core
  hs-source-dirs:    main-src
  main-is:           RefuncCore.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable cc
  hs-source-dirs:    main-src
  main-is:           CC.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable unnest-d
  hs-source-dirs:    main-src
  main-is:           UnnestD.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable unnest-r
  hs-source-dirs:    main-src
  main-is:           UnnestR.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010

executable move-con
  hs-source-dirs:    main-src
  main-is:           MoveCon.hs
  build-depends:     base >= 4.7 && < 4.8, uroboro, uroboro-transformations, transformers, mtl
  default-language:  Haskell2010